--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,12 @@ python-dotenv
 aiohttp
 cachetools
 sentry-sdk[fastapi]
-# Optional ML packages - may not be available on all platforms
+# ML packages for flood forecasting
 numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 joblib
+# Deep learning (optional - for LSTM model)
+# tensorflow>=2.13.0
+# Optional visualization
+matplotlib>=3.7.0
